objects/MDPERSONATOR__MD_propertyResponse__c.object
<CustomObject>
    <description>An object that stores the XML Response from the Property Web Service.</description>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedLenderCode__c</fullName>
        <label>CurrentDeedLenderCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedLenderName__c</fullName>
        <label>CurrentDeedLenderName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageAmount__c</fullName>
        <label>CurrentDeedMortgageAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageAssumptionAmount__c</fullName>
        <label>CurrentDeedMortgageAssumptionAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageDate__c</fullName>
        <label>CurrentDeedMortgageDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageDeedTypeCode__c</fullName>
        <label>CurrentDeedMortgageDeedTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageDueDate__c</fullName>
        <label>CurrentDeedMortgageDueDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageLoanTypeCode__c</fullName>
        <label>CurrentDeedMortgageLoanTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageTermCode__c</fullName>
        <label>CurrentDeedMortgageTermCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedMortgageTerm__c</fullName>
        <label>CurrentDeedMortgageTerm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedSecondMortgageAmount__c</fullName>
        <label>CurrentDeedSecondMortgageAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedSecondMortgageDeedTypeCode__c</fullName>
        <label>CurrentDeedSecondMortgageDeedTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentDeedSecondMortgageLoanTypeCode__c</fullName>
        <label>CurrentDeedSecondMortgageLoanTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleDeedCategoryCode__c</fullName>
        <label>CurrentSaleDeedCategoryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleDocumentYear__c</fullName>
        <label>CurrentSaleDocumentYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleMultiAPNCode__c</fullName>
        <label>CurrentSaleMultiAPNCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleMultiAPNCount__c</fullName>
        <label>CurrentSaleMultiAPNCount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleRecordingDate__c</fullName>
        <label>CurrentSaleRecordingDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleResidentalModel__c</fullName>
        <label>CurrentSaleResidentalModel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleSaleCode__c</fullName>
        <label>CurrentSaleSaleCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleSaleDate__c</fullName>
        <label>CurrentSaleSaleDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleSalePrice__c</fullName>
        <label>CurrentSaleSalePrice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleSellerName__c</fullName>
        <label>CurrentSaleSellerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CurrentSaleTransactionId__c</fullName>
        <label>CurrentSaleTransactionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressAddress__c</fullName>
        <label>OwnerAddressAddress</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressCarrierRoute__c</fullName>
        <label>OwnerAddressCarrierRoute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressCity__c</fullName>
        <label>OwnerAddressCity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressMailOptOut__c</fullName>
        <label>OwnerAddressMailOptOut</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressMatchcode__c</fullName>
        <label>OwnerAddressMatchcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressState__c</fullName>
        <label>OwnerAddressState</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressSuite__c</fullName>
        <label>OwnerAddressSuite</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerAddressZip__c</fullName>
        <label>OwnerAddressZip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerCorporateOwner__c</fullName>
        <label>OwnerCorporateOwner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerName2__c</fullName>
        <label>OwnerName2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerName__c</fullName>
        <label>OwnerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerPhoneOptOut__c</fullName>
        <label>OwnerPhoneOptOut</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerPhone__c</fullName>
        <label>OwnerPhone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerUnparsedName1__c</fullName>
        <label>OwnerUnparsedName1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnerUnparsedName2__c</fullName>
        <label>OwnerUnparsedName2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressPostDirectional__c</fullName>
        <label>ParsedPropertyAddressPostDirectional</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressPreDirectional__c</fullName>
        <label>ParsedPropertyAddressPreDirectional</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressRange__c</fullName>
        <label>ParsedPropertyAddressRange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressStreetName__c</fullName>
        <label>ParsedPropertyAddressStreetName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressSuffix__c</fullName>
        <label>ParsedPropertyAddressSuffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressSuiteName__c</fullName>
        <label>ParsedPropertyAddressSuiteName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ParsedPropertyAddressSuiteRange__c</fullName>
        <label>ParsedPropertyAddressSuiteRange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleDeedCategoryCode__c</fullName>
        <label>PriorSaleDeedCategoryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleDeedTypeCode__c</fullName>
        <label>PriorSaleDeedTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleDocumentYear__c</fullName>
        <label>PriorSaleDocumentYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleMortgageAmount__c</fullName>
        <label>PriorSaleMortgageAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleMultiAPNCode__c</fullName>
        <label>PriorSaleMultiAPNCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleMultiAPNCount__c</fullName>
        <label>PriorSaleMultiAPNCount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleRecordingDate__c</fullName>
        <label>PriorSaleRecordingDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleSaleCode__c</fullName>
        <label>PriorSaleSaleCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleSaleDate__c</fullName>
        <label>PriorSaleSaleDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleSalePrice__c</fullName>
        <label>PriorSaleSalePrice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleTransactionCode__c</fullName>
        <label>PriorSaleTransactionCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PriorSaleTransactionId__c</fullName>
        <label>PriorSaleTransactionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ProductName__c</fullName>
        <label>ProductName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressAddressKey__c</fullName>
        <label>PropertyAddressAddressKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressAddress__c</fullName>
        <label>PropertyAddressAddress</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressCity__c</fullName>
        <label>PropertyAddressCity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressLatitude__c</fullName>
        <label>PropertyAddressLatitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressLongitude__c</fullName>
        <label>PropertyAddressLongitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressState__c</fullName>
        <label>PropertyAddressState</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PropertyAddressZip__c</fullName>
        <label>PropertyAddressZip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ResponseResultCode__c</fullName>
        <label>ResponseResultCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ResponseResultDescription__c</fullName>
        <label>ResponseResultDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ResultCode__c</fullName>
        <label>ResultCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ResultDescription__c</fullName>
        <label>ResultDescription</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesAppraisedImprovementValue__c</fullName>
        <label>ValuesAppraisedImprovementValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesAppraisedLandValue__c</fullName>
        <label>ValuesAppraisedLandValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesAppraisedTotalValue__c</fullName>
        <label>ValuesAppraisedTotalValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesAssessedImprovementValue__c</fullName>
        <label>ValuesAssessedImprovementValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesAssessedLandValue__c</fullName>
        <label>ValuesAssessedLandValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesAssessedTotalValue__c</fullName>
        <label>ValuesAssessedTotalValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesCalculatedImprovementValueCode__c</fullName>
        <label>ValuesCalculatedImprovementValueCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesCalculatedImprovementValue__c</fullName>
        <label>ValuesCalculatedImprovementValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesCalculatedLandValueCode__c</fullName>
        <label>ValuesCalculatedLandValueCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesCalculatedLandValue__c</fullName>
        <label>ValuesCalculatedLandValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesCalculatedTotalValueCode__c</fullName>
        <label>ValuesCalculatedTotalValueCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesCalculatedTotalValue__c</fullName>
        <label>ValuesCalculatedTotalValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesMarketImprovementValue__c</fullName>
        <label>ValuesMarketImprovementValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesMarketLandValue__c</fullName>
        <label>ValuesMarketLandValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesMarketTotalValue__c</fullName>
        <label>ValuesMarketTotalValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesTaxAmount__c</fullName>
        <label>ValuesTaxAmount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ValuesTaxYear__c</fullName>
        <label>ValuesTaxYear</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Version__c</fullName>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__contactIdExtID__c</fullName>
        <externalId>true</externalId>
        <label>contactIdExtID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>MD_propertyResponse</label>
    <nameField>
        <label>MD_propertyResponse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD_propertyResponses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>